--- a/public/views/wallet.html
+++ b/public/views/wallet.html
@@ -20,14 +20,16 @@
       <table class='table table-striped table-bordered text-left'>
         <thead>
           <tr>
-            <th>Transaction</th>
-            <th>Actions</th>
+            <th>Address</th>
+            <th>Balance</th>
+            <th>Required confirmations</th>
           </tr>
         </thead>
         <tbody>
           <tr ng-repeat='wallet in wallets'>
-            <td><a href='https://ropsten.etherscan.io/tx/{{wallet.hash}}' target="_blank">{{wallet.hash}}</a></td>
-            <td></td>
+            <td><a href='https://ropsten.etherscan.io/address/{{wallet.walletAddress}}' target="_blank">{{wallet.walletAddress}}</a></td>
+            <td>{{wallet.balance}}</td>
+            <td>{{wallet.numberOfConfirmationsRequired}}</td>
           </tr>
         </tbody>
       </table>
