--- a/public/views/wallet.html
+++ b/public/views/wallet.html
@@ -17,11 +17,11 @@
       Fetching wallets ...
     </div>
     <div ng-show='status==="Loaded"'>
-      <table class='table table-striped table-bordered text-left'>
+      <table class='table table-striped table-bordered table-responsive text-left'>
         <thead>
           <tr>
             <th>Address</th>
-            <th>Balance</th>
+            <th>Balance (ETH)</th>
             <th>Required confirmations</th>
           </tr>
         </thead>
